[project]
name = "vllm-proxy"
version = "1.0.0"
description = "vLLM Proxy - FastAPI 패스스루 + 로깅"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
